refactor: adopt Java 21 Math.clamp and List.getFirst